--- a/DemoExperimentos/DemoExperimentos/Views/Login/Login.cshtml
+++ b/DemoExperimentos/DemoExperimentos/Views/Login/Login.cshtml
@@ -12,15 +12,15 @@
         <form class="form-horizontal" method="post">
             <div class="form-group">
                 @Html.LabelFor(x => x.Username)
-                @Html.TextBoxFor(x => x.Username, new { @class = "form-control", @placeholder = "Usuario" })
+                @Html.TextBoxFor(x => x.Username, new { @id = "username", @class = "form-control", @placeholder = "Usuario" })
                 @Html.ValidationMessageFor(x => x.Username, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 @Html.LabelFor(x => x.Password)
-                @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @placeholder = "Contraseña", @type = "password" })
+                @Html.TextBoxFor(x => x.Password, new { @id = "password", @class = "form-control", @placeholder = "Contraseña", @type = "password" })
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary"> Iniciar Sesión</button>
+                <button id="login-button" type="submit" class="btn btn-primary"> Iniciar Sesión</button>
             </div>
         </form>
     </div>
